--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+                <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -11,6 +11,7 @@
             padding: 0;
             font-family: Arial, sans-serif;
             background-color: #f1f1f1;
+            overflow: hidden; /* Prevent scrolling */
         }
 
         .container {
@@ -19,9 +20,10 @@
         }
 
         .banner {
-            background-image: url(Picsart_24-10-06_13-46-40-833.png); /* Placeholder for banner image */
+            background-image: url(Picsart_24-10-06_14-06-29-889.jpg); /* Placeholder for banner image */
             background-size: cover;
-            height: 500px;
+            background-position: center; /* Center the image */
+            height: 100vh; /* Full height */
             display: flex;
             align-items: center;
             justify-content: center;
@@ -45,6 +47,7 @@
             font-size: 1.5em;
             cursor: pointer;
             transition: background-color 0.3s ease;
+            border-radius: 5px; /* Rounded corners */
         }
 
         .claim-btn:hover {
@@ -63,6 +66,7 @@
             justify-content: center;
             align-items: center;
             text-align: center;
+            z-index: 1000; /* Ensure it's above everything else */
         }
 
         .popup h1 {
@@ -74,6 +78,8 @@
             background-color: #ff9f00;
             padding: 40px;
             border-radius: 10px;
+            max-width: 600px; /* Max width for popup */
+            width: 80%; /* Responsive width */
         }
 
         .categories {
@@ -157,4 +163,4 @@
         }
     </script>
 </body>
-  </html>
+</html>
