--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-                <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -11,7 +11,6 @@
             padding: 0;
             font-family: Arial, sans-serif;
             background-color: #f1f1f1;
-            overflow: hidden; /* Prevent scrolling */
         }
 
         .container {
@@ -20,10 +19,9 @@
         }
 
         .banner {
-            background-image: url(Picsart_24-10-06_14-06-29-889.jpg); /* Placeholder for banner image */
+            background-image: url('Screenshot_20241006-142612~2.png'); /* Placeholder for banner image */
             background-size: cover;
-            background-position: center; /* Center the image */
-            height: 100vh; /* Full height */
+            height: 500px;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -47,7 +45,6 @@
             font-size: 1.5em;
             cursor: pointer;
             transition: background-color 0.3s ease;
-            border-radius: 5px; /* Rounded corners */
         }
 
         .claim-btn:hover {
@@ -66,7 +63,6 @@
             justify-content: center;
             align-items: center;
             text-align: center;
-            z-index: 1000; /* Ensure it's above everything else */
         }
 
         .popup h1 {
@@ -78,8 +74,6 @@
             background-color: #ff9f00;
             padding: 40px;
             border-radius: 10px;
-            max-width: 600px; /* Max width for popup */
-            width: 80%; /* Responsive width */
         }
 
         .categories {
@@ -122,12 +116,6 @@
 </head>
 <body>
 
-    <!-- Audio player -->
-    <audio autoplay>
-        <source src="calm_down.mp3" type="audio/mpeg">
-        Your browser does not support the audio tag.
-    </audio>
-
     <div class="container">
         <div class="banner">
             Final Countdown to Claim Extra Discount on Your Shopping!
@@ -157,10 +145,23 @@
         <div class="firework" style="top: 80%; left: 30%;"></div>
     </div>
 
+    <!-- Background Music -->
+    <audio id="bg-music" autoplay loop>
+        <source src="calm_down.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
+
     <script>
+        // Show the popup
         function showPopup() {
             document.getElementById('popup').style.display = 'flex';
         }
+
+        // Auto-play music
+        window.onload = function() {
+            var audio = document.getElementById('bg-music');
+            audio.play();
+        }
     </script>
 </body>
-</html>
+</html>                
